# nopo

./: .actrc  .dockerignore  .env.local  .gitignore  .mcp.json  .mock-commit-placeholder  .npmrc  .secrets.example  .test-placeholder  .vars.example  AGENTS.md  CVA-BEM-Plugin-Summary.md  Dockerfile  Dockerfile.web  Makefile  README.md  TODO_INTEGRATION_SUMMARY.md  UV_GUIDE.md  command.sh  dev.sh  docker-bake.hcl  docker-compose.base.yml  docker-compose.yml  e2e-test.txt  entrypoint.sh  env.ts  eslint.config.ts  knip.ts  nopo.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  turbo.json  ui-component-migration-summary.md  uv-run.sh  wac.config.json
.changeset/: better-taxes-dream.md
apps/backend/: .gitignore  CHANGELOG.md  Dockerfile  JINJA2_SETUP.md  README.md  docker-compose.yml  eslint.config.ts  gunicorn.conf.py  infrastructure.json  main.py  manage.py  nopo.yml  package.json  pyproject.toml  settings.py  tsconfig.json  tsup.config.ts  vite.config.ts
apps/backend/assets/: index.html
apps/backend/assets/css/: main.css  tailwind.css
apps/backend/assets/js/: main.ts
apps/backend/mysite/: settings.py  urls.py
apps/backend/playwright/: smoketest.spec.ts
apps/backend/src/: index.test.ts  index.ts  index.tsx
apps/backend/src/backend/: logging_utils.py  utils.py
apps/backend/src/backend/auth/: __init__.py  apps.py  models.py  serializers.py  session_storage.py  tests.py  urls.py  views.py
apps/backend/src/backend/authentication/: apps.py  serializers.py  tests.py  urls.py  views.py
apps/backend/src/backend/mysite/: api_urls.py  apps.py  jinja2.py  middleware.py  tests.py  urls.py  views.py
apps/backend/src/backend/tests/: __init__.py  test_logging_utils.py  test_utils.py
apps/backend/src/backend/todo/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/backend/src/frontend/: main.ts
apps/backend/src/mysite/: apps.py  asgi.py  jinja2.py  tests.py  urls.py
apps/backend/src/mysite/templates/: base.html
apps/backend/src/templates/: base.html  home.html
apps/backend/src/templates/partials/: user_info.html
apps/backend/src/templates/todo/: todo_list.html
apps/backend/src/todo/: admin.py  apps.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/trading/: .env.example  .gitignore  README.md  nopo.yml  pyproject.toml
apps/trading/examples/: backtest_example.py  live_trading.py
apps/trading/src/trading/: __init__.py
apps/trading/src/trading/adapters/: __init__.py  alpaca.py  kalshi.py
apps/trading/src/trading/core/: __init__.py  backtest.py  portfolio.py  risk.py  strategy.py  types.py
apps/trading/src/trading/strategies/: __init__.py  mean_reversion.py  momentum.py  prediction_value.py
apps/trading/src/trading/tests/: __init__.py  test_backtest.py  test_risk.py  test_strategies.py
db/: .gitignore  (+8 more)
(+1491 files in other folders)
